--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -7,20 +8,12 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: rgb(44, 62, 80);
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  align-items:center;
+  /*font-size: calc(10px + 2vmin);*/
   color: white;
 }
 
@@ -28,11 +21,40 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App ul.menu {
+  margin-right: auto;
+  padding: 0.2%;
+  list-style: none;
 }
+
+.App ul.menu li {
+  display: inline-block;
+  padding: 0 10px;
+  text-decoration: none;
+}
+
+
+
+.App ul.logo {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.App ul.logo li.map {
+
+  padding: 0 0 0 7%;
+  margin:auto;
+  text-align: left;
+  font-size: 120%;
+  text-decoration: none;
+}
+
+.App ul.login {
+  display: flex;
+  margin-right: 1%;
+  list-style: none;
+}
+
+
